<resources>
    <string name="app_name">SeedAndHarvestGivings</string>

    <string name="app_id">462556980840593</string>

    <!--Login-->
    <string name="str_logintxt">Login or Create New Account</string>
    <string name="str_emailId">Email Id</string>
    <string name="str_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="str_forgotpwd">Forgot Password ? </string>
    <string name="str_clickher"><u> Click here</u></string>
    <string name="str_dont">Do not Have an Account?</string>
    <string name="btn_create">Create an Account</string>

    <!--Registartion-->

    <string name="str_name">Name</string>
    <string name="str_phone">Phone No.</string>
    <string name="str_createpwd">Create Password</string>
    <string name="str_recreatepwd">Re-Enter Password</string>
    <string name="str_register">Register Now</string>
    <string name="str_alreadyacc">Already Have An Account</string>

    <string name="str_forgotPwd">Forgot Your Password ?</string>
    <string name="btn_submit">Submit</string>
    <string name="str_forgotPasswordtxt">In order to receive your access code by email, please enter the email address you provided during the registration process.</string>
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>

    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>

    <string name="mis_folder_all">All Images</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>

    <!--Errors-->
    <string name="time_our_error">Time out.</string>
    <string name="can_not_connect">No Internet Connection Available.</string>
    <string name="auth_fail">Authentication Failed.</string>
    <string name="server_error">Server error.</string>
    <string name="netwotk_error">Unable to connect with network.</string>
    <string name="parser_error">Parse error.</string>
    <string name="unknow_error_txt">Unknown Error.</string>

    <string name="type_a_message">Type a message</string>
    <string name="title_activity__view__profile">Activity_View_Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hint_view_message">View Message</string>
    <string name="processing">Processing...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="contacts2">CONTACTS</string>
    <string name="sort_by">Sort By</string>
    <string name="grant">Grant</string>

    <!--Splash Screen-->

    <string name="btn_getstart">Get Started</string>


    <!--Bottom Menu -->
    <string name="str_menu_me">Me</string>
    <string name="str_menu_charti">Charities</string>
    <string name="str_menu_work">Worship</string>
    <string name="title_activity_maps">Map</string>

    <!--Church Details-->
    <string name="btn_donate">Donate</string>
    <string name="str_profile">Profile</string>
    <string name="str_gps">GPS</string>
    <string name="str_event">Event</string>
    <string name="str_donation">Donation</string>
    <string name="str_fav">Favorite</string>

    <string name="str_donate"><u>Donate Now</u></string>
    <string name="str_dummy">Your generous gift will help us fund our mission to help those in need . Together , we can make a difference.</string>

    <!--Donation -->
    <string name="text_donate">Donation Amount</string>
    <string name="text_donationthid">This Donation is for</string>
    <string name="txt_cyber">Cyber Giving Sunday</string>
    <string name="txt_youth">Youth Trip</string>
    <string name="txt_other">Other</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_adddona">Add Donation</string>
    <string name="txt_setrec">Set Recurring</string>
    <string name="txt_never">Never</string>
    <string name="txt_daily">Daily</string>
    <string name="txt_week">Weekly</string>
    <string name="txt_biweek">Bi-Weekly</string>
    <string name="txt_first">1st and 16th </string>
    <string name="txt_monthly">Monthly</string>
    <string name="txt_apyment">Payment</string>
    <string name="txt_pyment">Make Payment</string>

    <!--Recipt-->
    <string name="txt_success">Successful</string>
    <string name="txt_history">History</string>
    <string name="txt_share">Share with your friends</string>
    <string name="str_trans">Transaction fee of 2.9 % * 30 cents is taken out of each donation before the fund are disbursed to the organization</string>
    <string name="str_recipt">Receipt:</string>
    <string name="str_total">Total Amount:</string>
    <string name="str_approve">Approval Code:</string>
    <string name="str_date">Date:</string>
    <string name="str_details">Donation Details </string>
    <string name="str_envolpe">Envelope (member) Number</string>
    <string name="str_organis">Your organization should have assigned this to you</string>
    <string name="str_wonnt">We do not share the amount of your Donation</string>

</resources>
