<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="hnweb.com.findnearbychurches.activity.SplashActivity">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/logo" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="@dimen/dimens_30dp"
                android:layout_margin="@dimen/dimens_10dp"
                android:src="@drawable/logo_name"
               />
        </Toolbar>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_20dp"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/text_20"
            android:backgroundTint="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearancewhite">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/colorWhite1"
                android:ems="10"
                android:hint="@string/str_name"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/colorWhite1"
                android:theme="@style/EditTextThemeWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_20dp"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:backgroundTint="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1"

            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearancewhite">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite1"
                android:ems="10"
                android:hint="@string/str_emailId"
                android:inputType="textEmailAddress"
                android:singleLine="true"

                android:textColor="@color/colorWhite1"
                android:theme="@style/EditTextThemeWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_20dp"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:backgroundTint="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1"

            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearancewhite">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite1"
                android:ems="10"
                android:hint="@string/str_phone"
                android:inputType="phone"
                android:singleLine="true"

                android:textColor="@color/colorWhite1"
                android:theme="@style/EditTextThemeWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_createpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_20dp"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:backgroundTint="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1"

            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearancewhite">

            <EditText
                android:id="@+id/et_createpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite1"
                android:ems="10"
                android:hint="@string/str_createpwd"
                android:inputType="textPassword"
                android:singleLine="true"

                android:textColor="@color/colorWhite1"
                android:theme="@style/EditTextThemeWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_reenpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_20dp"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:backgroundTint="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1"

            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearancewhite">

            <EditText
                android:id="@+id/et_reenpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite1"
                android:ems="10"
                android:hint="@string/str_recreatepwd"
                android:inputType="textPassword"
                android:singleLine="true"

                android:textColor="@color/colorWhite1"
                android:theme="@style/EditTextThemeWhite" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_registernow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_rectangle"
            android:gravity="center"
            android:text="@string/str_register"
            android:textColor="@color/colorWhite1" />


        <TextView
            android:id="@+id/tv_alreadyacc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:gravity="center"
            android:text="@string/str_alreadyacc"
            android:textColor="@color/colorWhite1"
            android:textSize="@dimen/text_size_16sp" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/white_button"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</ScrollView>