<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimens_60dp"
    android:layout_marginLeft="@dimen/dimens_10dp"
    android:layout_marginRight="@dimen/dimens_10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/str_donate"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/dimens_10dp"
            android:text="@string/txt_history"
            android:layout_marginTop="@dimen/dimens_5dp"

            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:text="$0.00"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:src="@drawable/visa1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimens_10dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            android:src="@drawable/mastercard1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimens_10dp"

            android:layout_marginTop="@dimen/dimens_8dp"
            android:src="@drawable/american_express" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimens_10dp"

            android:layout_marginTop="@dimen/dimens_8dp"
            android:src="@drawable/paypal1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:gravity="center"
        android:text="@string/str_dummy"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp" />

</LinearLayout>